@@ -123,10 +123,10 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
   ios_base::Init::~Init()
   {
     // Be race-detector-friendly.  For more info see bits/c++config.
-    _GLIBCXX_SYNCHRONIZATION_HAPPENS_BEFORE(&_S_refcount)
+    _GLIBCXX_SYNCHRONIZATION_HAPPENS_BEFORE(&_S_refcount);
     if (__gnu_cxx::__exchange_and_add_dispatch(&_S_refcount, -1) == 2)
       {
-        _GLIBCXX_SYNCHRONIZATION_HAPPENS_AFTER(&_S_refcount)
+        _GLIBCXX_SYNCHRONIZATION_HAPPENS_AFTER(&_S_refcount);
 	// Catch any exceptions thrown by basic_ostream::flush()
 	__try
 	  { 
